# onnxusing

./: .gitignore  README.md
instructions/: description.docx
instructions/1/: task_for_cpp_test.sln
instructions/1/task_for_cpp_test/: Calculation.cs  CraftComponent.cs  Program.cs  RecognitionService.cs  SystemDrawingService.cs  task_for_cpp_test.csproj
instructions/1/task_for_cpp_test/resources/: linkmap.txt
task1/: CMakeLists.txt  Calculation.cpp  Calculation.h  RecognitionService.cpp  RecognitionService.h  SystemDrawingService.cpp  SystemDrawingService.h  helpers.h  improvement.txt  main.cpp
task1/resources/: textmap.txt
task2/: CMakeLists.txt  alphabet_chinese.txt  chinese.cs  main.cpp
task2/include/neurolang/: ITextParsingService.h  SingleLineChineeseParser.h  helpers.h
task2/src/: SingleLineChineeseParser.cpp
